--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,12 @@
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 title: "Tatlo | Sara Jimenez and Jade Yumang" # the name of your site, e.g. ACME Corp.
+
+sass:
+  style: compressed
+
+compress_html:
+  blanklines: true
+
+plugins:
+  - jekyll-seo-tag
