--- a/.forestry/front_matter/templates/home.yml
+++ b/.forestry/front_matter/templates/home.yml
@@ -1,5 +1,5 @@
 ---
-label: Home
+label: Layout Home
 hide_body: true
 fields:
 - type: text
@@ -27,8 +27,8 @@ fields:
   type: list
   config:
     use_select: true
-    min: 
-    max: 
+    min:
+    max:
     source:
       type: pages
       section: work
