--- a/.forestry/front_matter/templates/work.yml
+++ b/.forestry/front_matter/templates/work.yml
@@ -1,5 +1,5 @@
 ---
-label: Default
+label: Layout Work
 hide_body: true
 fields:
 - name: layout
@@ -39,8 +39,8 @@ fields:
   - images
   - embed
   config:
-    min: 
-    max: 
+    min:
+    max:
 - name: date
   type: datetime
   label: Date
@@ -48,7 +48,7 @@ fields:
   config:
     required: false
     date_format: YYYY
-    time_format: 
+    time_format:
     display_utc: false
 - name: details
   type: textarea
