--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://tatlo.info/" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 title: "Tatlo | Sara Jimenez and Jade Yumang" # the name of your site, e.g. ACME Corp.
 
@@ -10,3 +10,4 @@ compress_html:
 
 plugins:
   - jekyll-seo-tag
+  - jekyll-sitemap
